@@ -1,37 +1,48 @@
 package tasks;
 
 import common.Person;
-import java.time.Instant;
-import java.util.Collections;
-import java.util.List;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-public class Task3Test {
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
-  private Person person1;
-  private Person person2;
-  private Person person3;
-  private Person person4;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-  @BeforeEach
-  void before() {
-    Instant time = Instant.now();
-    person1 = new Person(1, "Oleg", "Ivanov", time);
-    person2 = new Person(2, "Vasya", "Petrov", time);
-    person3 = new Person(3, "Oleg", "Petrov", time.plusSeconds(1));
-    person4 = new Person(4, "Oleg", "Ivanov", time.plusSeconds(1));
-  }
+class Task3Test {
 
-  @Test
-  public void test() {
-    assertEquals(List.of(person1, person4, person3, person2), Task3.sort(List.of(person1, person2, person3, person4)));
-    assertEquals(List.of(person1, person4, person3, person2), Task3.sort(List.of(person4, person3, person2, person1)));
-  }
+    private Person person1;
+    private Person person2;
+    private Person person3;
+    private Person person4;
 
-  @Test
-  public void testEmpty() {
-    assertEquals(Collections.emptyList(), Task3.sort(Collections.emptyList()));
-  }
+    @BeforeEach
+    void before() {
+        Instant time = Instant.now();
+        person1 = new Person(1, "Oleg", "Ivanov", time);
+        person2 = new Person(2, "Vasya", time);
+        person3 = new Person(3, "Oleg", "Petrov", time.plusSeconds(1));
+        person4 = new Person(4, "Oleg", "Ivanov", time.plusSeconds(1));
+    }
+
+    @Test
+    void test() {
+        assertEquals(List.of(person1, person4, person3, person2), Task3.sort(List.of(person1, person2, person3, person4)));
+        assertEquals(List.of(person1, person4, person3, person2), Task3.sort(List.of(person4, person3, person2, person1)));
+    }
+
+    @Test
+    void testWithNull() {
+        List<Person> personsWithNull = new ArrayList<>();
+        personsWithNull.add(null);
+        personsWithNull.add(person1);
+        assertEquals(List.of(person1), Task3.sort(personsWithNull));
+    }
+
+    @Test
+    void testEmpty() {
+        assertEquals(Collections.emptyList(), Task3.sort(Collections.emptyList()));
+    }
 }
